adding Readme and make changes for composer
