# log-ingestor-service/src/docs/swagger.yaml
@@ -50,7 +50,7 @@ definitions:
     required:
     - timestamp
     type: object
-host: localhost:8082
+host: localhost:8080
 info:
   contact: {}
   description: API for ingesting and querying logs
@@ -119,6 +119,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/genricerror.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get all logs
       tags:
       - Logs
@@ -148,6 +150,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/genricerror.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Create a new log
       tags:
       - Logs
@@ -177,6 +181,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Delete a specific log
       tags:
       - Logs
@@ -209,6 +215,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/genricerror.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Get a specific log
       tags:
       - Logs
@@ -251,6 +259,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/genricerror.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Search logs
       tags:
       - Logs
@@ -258,7 +268,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Creates a new user account with username and password
+      description: Creates a new user account with username, password, and email
       parameters:
       - description: User registration details
         in: body
@@ -280,7 +290,7 @@ paths:
               type: string
             type: object
         "409":
-          description: 'error: Username already exists'
+          description: 'error: Username or email already exists'
           schema:
             additionalProperties:
               type: string
@@ -294,4 +304,10 @@ paths:
       summary: Register a new user
       tags:
       - Auth
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
